Grammar and Spelling

--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
-                                   <strong>1/27/2023: </strong> Sold my LABD hedge position as the XBI looks to be breaking out of its range. It 
-                                   looks like resistance is around $90 so it could still go either way. My plan is to hope we hit 
-                                   $95 on the XBI in the short term so I can sell some of my losers and raise some cash. That way 
-                                   I have money to put to work when it pulls back again.
+                                   <strong>2/2/2023: </strong> I added to my IPSC position to bring it up to 4.13% position.
+                              </p>
+                              <p>
+                                   <strong>2/2/2023: </strong> I added my February Contribution
+                              </p>
+                              <p>
+                                   <strong>2/2/2023: </strong> I sold 25% of my CDXS position due to loss of confidence in the company.
                               </p>
                          </div>
                     </section>
