--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -96,15 +96,15 @@
                               cancer cells do. Some drugs target the process by which DNA gets copied. Understanding the basics of 
                               genetics of what the purines and pyrimidines are, how DNA is structured and how it gets copied. The last 
                               main concept will be to understand how Mitosis works with the Chromosomes. Some drugs target the process 
-                              of mitosis to prevent rapdily dividing cells. When we get to these concepts, I will go over the basics of 
+                              of mitosis to prevent rapidly dividing cells. When we get to these concepts, I will go over the basics of 
                               how they work. 
                          </p>
                          <p>
-                              The first key term we need to know about pharmacology is Mechanism of Action also known as 
-                              the Pharmocodynamics. This is how the drug actually works. What does it really do? All Chemotherapy drugs 
+                              The first key term we need to know about pharmacology is Mechanism of Action also known
+                              as Pharmacodynamics. This is how the drug actually works. What does it really do? All Chemotherapy drugs 
                               have one goal in their Mechanism of Action. All cancer cells grow and replicate at an alarming rate. 
                               Chemotherapy drugs target the many processes of the cell cycle or DNA synthesis to block cells from 
-                              replicating. Its a very simple concept. The idea is most human cells do not go through mitosis very often. 
+                              replicating. It is a very simple concept. The idea is most human cells do not go through mitosis very often. 
                               The cancer cells are going through mitosis very often. If you target cells that are going through the cell 
                               cycle and kill them, most of the time, you will be killing cancer cells. Yes, Chemotherapy targets and kills 
                               cells that are going through the growth cycle. This means any normal cells that try to go through the cell 
@@ -119,20 +119,20 @@
                               bleeding times. The next cell that turns over often is the hair cells. Hair grows every day. Chemotherapy 
                               will disrupt and kill these cells. This often leads to hair loss with chemotherapy. The last major cell that 
                               suffers from the effects of chemotherapy is the GI tract. These cells turn over very frequently. This leads 
-                              to some GI issues. One such issue in inflamed GI tract. Some of these GI sores and inflammation can be very 
+                              to some GI issues. One such issue is an inflamed GI tract. Some of these GI sores and inflammation can be very 
                               painful. Chemotherapy works, but it has many side effects. This leads to the concept of targeted therapies. 
                               These are designed to target only cancer cells by looking for things cancer cells have that healthy cells 
                               to not have.
                          </p>
                          <p>
                               Chemotherapies are actually groups of drugs that share many of the similar effects to block cells from 
-                              dividing. A regimen is a set of chemotherapies drugs chosen from these many classes of drugs.
+                              dividing. A regimen is a set of chemotherapeutic drugs chosen from these many classes of drugs.
                               Each chemotherapy regimen, for a specific cancer, might have different drugs from these classes 
                               in them. Sometimes, even different chemotherapy regimens will be different between patients with 
                               the same type of cancer. This will cover the classes of chemotherapy drugs. The Oncologist will pick
                               drugs from these classes for each patient based on their cancer type. They will pick a group of drugs
                               that they think will best help that specific patient for that specific cancer. Each 
-                              patient is different and might have a differet set of drugs in their regimen. Some regimens of drugs are used 
+                              patient is different and might have a different set of drugs in their regimen. Some regimens of drugs are used 
                               very commonly in specific cancer types such as CHOP or R-CHOP in Lymphomas. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -145,7 +145,7 @@
                               The first class of Chemotherapy drugs we will look at are a class of antibiotics called the Anthracyclines.
                               You might be wondering why a class of antibiotics could work to fight cancer. We will look at the 
                               mechanism of action for this class of drugs. This is one of the top used chemotherapy drug classes. Forms 
-                              of Doxorubicin and Daunorubicin are used in many types of cancer. The H in CHOP chemo therapy for Lymphoma 
+                              of Doxorubicin and Daunorubicin are used in many types of cancer. The H in CHOP chemotherapy for Lymphoma 
                               stands for Hydroxydaunorubicin. They are a very effective class of drugs for treating cancer. They are typically 
                               administered by IV at specific times in the treatment cycle. They have a long laundry list of chemo 
                               related side effects. Their biggest concern is a side effect of Anthracycline related Cardiotoxicity. This makes 
@@ -154,7 +154,7 @@
                          </p>
                          <p>
                               So now that we know about this class of drugs, we will dig into how they work. If you think 
-                              about what is similar between a bacteria and a human cells, what is the one key element? 
+                              about what is similar between a bacteria and a human cell, what is the one key element? 
                               They both have double stranded DNA, and they both have to copy that DNA to replicate. The Anthracyclines 
                               have 3 ways in which they interfere with cell replication. The first is they intercalate into the DNA. This 
                               means the Doxorubicin or Daunorubicin will actually insert itself into the DNA. This interferes with the 
@@ -202,12 +202,12 @@
                               many other cells for growth like those blood cells. That leads to its use in many cancers like breast or lung 
                               cancer and inflammation disorders. The suppression of folate synthesis affects many cells.
                               It brings with it all the common side effects of chemotherapy agents with cell counts, hair loss and GI 
-                              toxicity. It has the additional  concern of hepatoxicity.
+                              toxicity. It has the additional  concern of hepatotoxicity.
                          </p>
                          <p>
                               The set of drugs in this class will block the metabolism of purine or pyrimidine nucleotides. Some 
                               of them will block both pathways. There are a few common drugs used that work by this mechanism of 
-                              action. Mercaptopurine also known as 6-MP. This works by blocking an enzyme necessary for purine metabolism. 
+                              action. Mercaptopurine is also known as 6-MP. This works by blocking an enzyme necessary for purine metabolism. 
                               It has many of the same antimetabolite effects and many of the same chemotherapy side effects. 5 
                               Fluorouracil (5FU) is another antimetabolite which targets an enzyme in pyrimidine metabolism. This 
                               provides the same effects as other antimetabolites. This is a very commonly used antimetabolite drug for 
@@ -217,15 +217,15 @@
                          </p>
                          <p>
                               The last drug I want to cover in this category is Gemcitabine which is used often. 
-                              This is an example of an analog. Its a fake form of a nucleotide. When it enters the cell, its modified 
+                              This is an example of an analog. It is a fake form of a nucleotide. When it enters the cell, it is modified 
                               so it can be used in the new strand of DNA. Because its not a real nucleotide the DNA repair machinery 
-                              wont be able to fix it. This leads to an unfixable DNA damage situation which arrests the cell division and 
+                              won't be able to fix it. This leads to an unfixable DNA damage situation which arrests the cell division and 
                               causes the initiation of cell death by p53 activation.
                          </p>
                          <p>
                               Antimetabolites are a very common type of chemotherapy. They are sometimes used in combination with other 
                               antimetabolites or even other regimens of chemotherapy drugs. Very rarely is a chemo drug used alone. The 
-                              major drawback of these drugs is they still affect all cells that going through the cell cycle. They cause 
+                              major drawback of these drugs is they still affect all cells that go through the cell cycle. They cause 
                               a ton of collateral damage.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -234,7 +234,7 @@
                     <section>
                          <h2 class="science-headers" id="mitotic">Antimitotic Drugs</h2>
                          <p> 
-                              The antimitiotic drugs are the Taxanes and the Vinca Alkaloids. These drugs target the cell 
+                              The antimitotic drugs are the Taxanes and the Vinca Alkaloids. These drugs target the cell 
                               cycle in its M phase targeting the process of mitosis itself. To understand how they work, we first need 
                               to understand the basics of mitosis. When the cells enter the M phase, the nucleus breaks down. Spindles 
                               will form and move to each side of the cell. The sister chromatids will line up at the center of the cell.
@@ -247,23 +247,23 @@
                          <p>
                               The Taxanes work by disrupting the deformation of the Tubulin polymers. You might be thinking, "What is a 
                               polymer?" Let me explain. A polymer is basically a unit of something that gets strung together in a long 
-                              chain. Like the beads on a necklace would be a polymer of beads. The Tubulin is formed from 2 proteins 
-                              call the Alpha and Beta protein that are combined together and repeated over and over again into long 
-                              polymer chains. The Taxanes bind to the Beta Tubulin and stabilize it preventing the deformation of the 
+                              chain. Like the beads on a necklace would be a polymer of beads. Tubulin is formed from 2 proteins 
+                              called the Alpha and Beta protein that are combined together and repeated over and over again into long 
+                              polymer chains. The Taxanes bind to the Beta Tubulin and stabilize it, preventing the deformation of the 
                               tubulin strands. This blocks the process of mitosis. This causes a problem with the cell and it undergoes 
                               cell death. There is a cell checkpoint at this stage. It is called the Spindle checkpoint. This is a set 
                               of proteins that verify that a single tubulin is attached to each chromosome before letting them split. 
                               Taxanes prevent cells from finishing the process of mitosis and blocks the cells which are going through 
                               the cell cycle. This brings with it many of the same side effects known with chemotherapy like 
-                              suppression of the blood cells, hair loss and GI toxicity. The Taxanes were originally discovered from plant 
+                              suppression of the blood cells, hair loss and GI toxicity. The Taxanes were originally discovered from plants 
                               of the Yew. There are newer fully synthetic forms of taxanes. The 2 most common Taxanes are Docetaxel and 
                               Paclitaxel. These drugs are widely used in cancer chemotherapy regimens.
                          </p>
                          <p>
-                              The other group of antimitotic drugs are the Vinca Alkyloids like Vincristine. As the taxane allow the formation 
-                              of tubulin but block its breakdown, the vinca alkyloids prevent the formation of the tubulin at all. They 
-                              have the same effect, but they just go about it slightly different. The Vinca Alkyloids work by blocking the 
-                              formation of the Tubulin  polymers. Vincristine is part of the Chemotherapy regimen for lymphoma. Its the O 
+                              The other group of antimitotic drugs are the Vinca Alkaloids like Vincristine. As the taxane allows the formation 
+                              of tubulin but blocks its breakdown, the vinca alkaloids prevent the formation of the tubulin at all. They 
+                              have the same effect, but they just go about it differently. The Vinca Alkaloids work by blocking the 
+                              formation of the Tubulin  polymers. Vincristine is part of the Chemotherapy regimen for lymphoma. It is the O 
                               in CHOP going by its brand name Oncovin.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -278,21 +278,21 @@
                               triggered and p53 increases. This causes the cell cycle to stop and attempt repair of the DNA. If the damage 
                               is too great, the level of p53 will rise to the point where it will initiate cell death. That is the 
                               concept behind alkylating agents. They get into the DNA and cause massive damage to trigger the pathway 
-                              that leads to cell death. There are several sub classes of Alkylating agents, but I am only going to look at 
+                              that leads to cell death. There are several subclasses of Alkylating agents, but I am only going to look at 
                               3 of them as we will see them so often in clinical trials. It will be very helpful when you see these drugs 
                               in treatments like cancer or even lymphodepletion to know what they do. 
                          </p>
                          <p>
-                              First we will look at the Nitrogen Mustard Agents. These get their name from their fist use in Mustard Gas as 
-                              a chemical warfare agent. They work by getting into the DNA can crosslinking the bases together. Mustard agents
-                              are complicated chemistry, but they are designed to do massive DNA damage and cause cell death by trigging 
+                              First we will look at the Nitrogen Mustard Agents. These get their name from their first use in Mustard Gas as 
+                              a chemical warfare agent. They work by getting into the DNA and crosslinking the bases together. Mustard agents
+                              are complicated chemistry, but they are designed to do massive DNA damage and cause cell death by triggering 
                               the p53 activation. The most important Nitrogen Mustard drug we will deal with every day is Cyclophosphamide. 
-                              This drug is used in the Lyphodepletion regimen of Fludarabine/Cyclophophamide (Flu/Cy). Yes, you might have 
+                              This drug is used in the Lymphodepletion regimen of Fludarabine/Cyclophosphamide (Flu/Cy). Yes, you might have 
                               guessed it. Many of the same chemotherapy agents that treat cancer will wipe out the immune cells as they 
                               replicate very quickly. Some of these drugs like Busulfan, Cyclophosphamide and Fludarabine can also be used 
                               to wipe out immune cells or stem cells. Only Cyclophosphamide is a Nitrogen Mustard.
                          <p>
-                              Busulfan is another type Alkylating agent called Alkyl Sulfonates. Busulfan works 
+                              Busulfan is another type of Alkylating agent called Alkyl Sulfonates. Busulfan works 
                               by the same concept. It specifically cross links guanine bases.
                               You will hear about Busulfan use a lot in genetic therapies. It is used to deplete stem cells to remove 
                               them before transplant. It is used by companies doing stem cell therapies like CRISPR therapeutics for its 
@@ -308,7 +308,7 @@
                          <p>
                               The clear example of a chemotherapy regimen is CHOP chemotherapy. This uses Cyclophosphamide as a DNA damaging agent with Daunorubicin as 
                               the anthracycline with Vincristine as the antimitotic drug. They are combined with Prednisone as it 
-                              helps offset some of the inflammation side effects of the other drugs. these chemotherapy agents are quite toxic. 
+                              helps offset some of the inflammation side effects of the other drugs. These chemotherapy agents are quite toxic. 
                               They target the cell cycle to prevent cells from proliferation. This kills cancer cells, but it has very 
                               bad collateral damage in healthy tissues.
                          </p>
