Grammar and Spelling

--- a/learning/hallmarks.html
+++ b/learning/hallmarks.html
@@ -58,7 +58,7 @@
 
           <main>
 
-               <h1 class="science-headers">Human Leukocyte Antigens</h1>
+               <h1 class="science-headers">Hallmarks of Cancer</h1>
 
                <div class="science-container">
           
@@ -100,7 +100,7 @@
                          <h2 class="science-headers" id="hallmarks">The Hallmarks of Cancer</h2>
                          <p>     
                               In 2000, the first hallmarks of cancer were published. There were 6 behaviors all cancers would 
-                              develop as they go from healthy cell to metastatic growth. This was the first attempt to organize the 
+                              develop as they go from healthy cells to metastatic growth. This was the first attempt to organize the 
                               complexity of cancer biology. Since then, we have added four more. Cancer begins when a cell loses 
                               control over the functions that regulate cell growth. It begins with genetic instability, loss of 
                               mortality, uncontrolled growth and loss of growth inhibitors. These are the main genetic drivers 
@@ -117,18 +117,18 @@
                               replicate frequently and others will never replicate. Cancer begins when a cell begins 
                               to act on its own replicating without the necessary signaling. This can happen when a mutation  occurs 
                               in one of the growth pathways. These are those proto-oncogenes that mutate to become oncogenes which 
-                              drives cell proliferation. They are mutations in the growth receptors for growth signals like EFGR, VEGF, 
+                              drives cell proliferation. They are mutations in the growth receptors for growth signals like EGFR, VEGF, 
                               FGFR and PDGF and many more. These types of mutations will lead to an always on state for those growth 
                               factor receptors. This is called becoming Constitutively Active.
                          </p>
                          <p>
                               Some of these increased growth signals come from the duplication of a gene during DNA synthesis. This 
-                              leads to multiple copies of a growth receptor. This leads to hyper activity of the cell from an over 
-                              expression of growth receptors. These are called amplification mutations. Some of these proto oncogene 
+                              leads to multiple copies of a growth receptor. This leads to hyperactivity of the cell from an over 
+                              expression of growth receptors. These are called amplification mutations. Some of these proto-oncogene 
                               mutations occur in the internal cellular growth pathways like RAS, RAF, MEK, ERK, PI3K and AKT. These 
                               pathways link the growth receptors to the genes in the cell that control growth. It only takes one 
                               mutation in one of these oncogenes to drive increased cell growth. These cells can be perfectly normal in 
-                              every way except they are replicating at a faster rate. Mutations in proto oncogenes lead to gain of 
+                              every way except they are replicating at a faster rate. Mutations in proto-oncogenes lead to gain of 
                               function mutations.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -139,9 +139,9 @@
                          <p>
                               The second hallmark of cancer is the loss of those genes that prevent cells from growing without the 
                               proper signals. They involve proteins that verify the DNA during the cell cycle checkpoints like p53, 
-                              p21 and Rb. Thes genes that regulate the cell cycle by blocking growth under normal conditions 
-                              are called Tumor Suppressor genes. They act like the brakes for the cell growth cycle. Mutations in 
-                              Tumor Suppressor gene cause a loss of function. They include the DNA Damage Repair (DDR) pathway proteins 
+                              p21 and Rb. These genes regulate the cell cycle by blocking growth under normal conditions 
+                              are called Tumor Suppressor genes. They act like the brakes for the cell growth cycle. Mutations in the
+                              Tumor Suppressor genes cause a loss of function. They include the DNA Damage Repair (DDR) pathway proteins 
                               and enzymes that fix damage to the DNA. DNA damage repair pathways fix damage from stress like oxidation, 
                               radiation and chemicals. These tumor suppressor genes are broken down into gatekeeper genes and caretaker 
                               genes. The gatekeepers are those genes that act as the breaks to cell replication. They are there to 
@@ -149,9 +149,9 @@
                               ensure the integrity and control DNA repair.
                          </p>
                          <p>
-                              Since there are 2 copies of every Tumor Suppressor genes, they will still work if only 1 gene is lost. This 
+                              Since there are 2 copies of every Tumor Suppressor gene, they will still work if only 1 gene is lost. This 
                               leads us to the 2 hit hypothesis of tumor suppressor genes. This states that both genes must be lost before 
-                              the funtion of a tumor suppressor gene is completely lost. 
+                              the function of a tumor suppressor gene is completely lost. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
 
@@ -180,8 +180,8 @@
                               Hallmark 4: Resist Death Signals
                          </p>
                          <p>
-                              The third hallmark is the shifting of the balance between the signals that tell a cell to survive over 
-                              those that tell it to die. All cells are constantly getting feedback in the for of signals that tell them 
+                              The next hallmark is the shifting of the balance between the signals that tell a cell to survive over 
+                              those that tell it to die. All cells are constantly getting feedback in the form of signals that tell them 
                               when they should surivie and when they should die. You want a healthy cell to survive and bad cells to 
                               die. Only when something goes wrong, should it initiate programmed cell death (Apoptosis). In cancer, the 
                               pathways for the survival signals will mutate and greatly shift that balance in favor of survival even in 
@@ -199,7 +199,7 @@
                               cell can no longer replicate. This is called the Hayflick limit. It is called Senescence when the cell 
                               reaches its limitations to replication. The stem cells are immortal as they have a gene active for them to 
                               extend their telomeres each time they replicate. Cancer cells mutate to turn on the telomerase enzyme which 
-                              extends the telomeres after each replication giving them attributes of stem cells. This give them immortality.
+                              extends the telomeres after each replication giving them attributes of stem cells. This gives them immortality.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
 
@@ -228,7 +228,7 @@
                               body.  Tumors need a lot of nutrients to drive their growth. They will release Vascular Endothelial Growth 
                               Factor (VEGF) which will act on the endothelial cells of nearby blood vessels. This will cause them to 
                               create new routes of blood vessels toward those signals. Angiogenesis of new vessels act as a boost
-                              for the tumor. It providins key nutrients to the tumor to promote growth, and it acts as a 
+                              for the tumor. It provides key nutrients to the tumor to promote growth, and it acts as a 
                               highway system for tumor cells to move into the circulation and travel to other tissues.
 
                          </p>
@@ -257,7 +257,7 @@
                               and TGF-beta. This will cause T helper cells to switch into induced T regs. They will then release cytokines 
                               which will shut down the immune response toward the tumor. The macrophages in the area will be switched 
                               away from the M1 phenotype which kills tumor cells and to the M2 phenotype so they release TGF-beta which 
-                              promotes growth for the tumor and inducement of T regultory cells. The tumor cells can express ligands on 
+                              promotes growth for the tumor and inducement of T regulatory cells. The tumor cells can express ligands on 
                               their surface that can deactivate cytotoxic T cells and Macrophages. They can express PD-L1 which will 
                               stop cytotoxic T cells from killing them. The constant activation of these T cells without the ability to 
                               kill leads to them becoming exhausted, causing them to fail to respond at all. The tumor cells can also 
@@ -277,7 +277,7 @@
                               metastasizing. The statistics show that 90% of cancers become fatal once they are metastatic. During 
                               the process of metastasis, the cells must undergo a transition from a normal Epithelial cell into a 
                               Mesenchymal type stem cell. This process is called the Epithelial to Mesenchymal Transition (EMT). 
-                              The Mesenchymal cell is a stem cell like population. These invasive EMT cells will intravasate into 
+                              The Mesenchymal cell is a stem cell-like population. These invasive EMT cells will intravasate into 
                               the blood vessels where they become circulating tumor cells (CTCs). The circulation is very hostile to 
                               these CTC cells, but survivors can extravasate into new tissues called homing.
                          </p>    
@@ -286,8 +286,8 @@
                               brings us to the seed and soil hypothesis. This states the CTC cells are like seeds that spread out from 
                               the tumor. They will spread everywhere, but they will only be able to take root in congenial soil that 
                               will support new growth. Some of these EMT cells can lay dormant for decades at new sites before they 
-                              start to grow a new metastasis. Each cancer type will have specific tissues where it tends to spread to 
-                              like prostate cancer nearly always goes to the bone. The most common place metastasis appear are Brain, 
+                              start to grow a new metastasis. Each cancer type will have specific tissues where it tends to spread 
+                              like prostate cancer nearly always goes to the bone. The most common place metastases appear are Brain, 
                               Bone, Liver and Lungs.
                          </p>  
                          <p class="top-link"><a href="#top">Top</a></p>              
