Grammar and Spelling

--- a/pages/innovation.html
+++ b/pages/innovation.html
@@ -120,7 +120,7 @@
                     <p class="large-text">
                          CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases 
                          and completely create new ways to take on other diseases like cancer. It offers a low cost, easy to use, and very
-                         powerful set of tools to alter the DNA. Since its discovery, it has already completely
+                         powerful set of tools to alter the DNA. Since its discovery, it has completely
                          changed the landscape of biotechnology. This gives us the ability to rewrite human
                          code. We can build therapies using cells by reprogramming them. We can knock out 
                          genes that cause harm. We can insert new genes and replace a lost gene. We can fix a gene
@@ -129,7 +129,7 @@
                          and kill cancer. It can be used to create new life in plants that can resist drought or grow bigger.
                          It can engineer microbes that can produce fertilizer right in the field for the plants. It can be
                          used to engineer microbes that become sustainable manufacturing for ingredients.
-                         The ability of gene editing tools to give us the ability to change the genetic code of people, plants,
+                         The ability of gene editing tools to allow us to change the genetic code of people, plants,
                          animals, and microbes could change the world. It can help us solve some of our biggest environmental issues like carbon 
                          emissions and global warming. Combined with other technologies, it can be a very powerful tool.
                     </p>
