--- a/index.html
+++ b/index.html
@@ -76,13 +76,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>2/2/2023: </strong> I started doing the Grammar and Spell checking across
-                                   the website. I plan to take a few days to get that part done before adding new content.
+                                   <strong>2/2/2023: </strong> I finished up the grammar and spelling checks on all the pages except the 
+                                   company profiles. I plan to revamp the company profiles as I go through earnings.
                               </p>
-                              <p> 
-                                   <strong>2/1/2023: </strong> I started the Clinical Data pages. I have officially carried over all 
-                                   my learning content. Now I can start to create new content.
-                              </p>
+                              
                          </div>
                     </section>
                </div>
