--- a/learning/inflammation.html
+++ b/learning/inflammation.html
@@ -78,7 +78,7 @@
                     <section>
                          <h2 class="science-headers" id="vascular">Vascular Events</h2>
                          <p>     
-                              Inflammation is the bodies alarm for damage or infections. It can start from tissue damage like a 
+                              Inflammation is the body's alarm for damage or infections. It can start from tissue damage like a 
                               cut or broken bone. It can also start with an infection that gets into the tissue. There are four 
                               cardinal symptoms of inflammation with Pain, Redness, Heat and Swelling. The Endothelial cells that 
                               make up the blood vessels regulate what can move out of the blood and into the tissue. The endothelial 
@@ -89,8 +89,8 @@
                          </p>
                          <p>
                               When injury or infection occurs, the blood vessels in that area will dilate allowing more blood and immune 
-                              cells to flow into that area. The blood is red, and it has a much higher temperature then the skin. The 
-                              increased blood flow will lead to the redness and heat. The increased cellular activity in the area of 
+                              cells to flow into that area. The blood is red, and it has a much higher temperature than the skin. The 
+                              increased blood flow will lead to redness and heat. The increased cellular activity in the area of 
                               damage will contribute to the increased heat. Blood vessels will also increase their permeability. The endothelial 
                               cells will shrink to increase the gap between them. This allows for the flow of blood, fluids, immune 
                               cells, antibodies and complement proteins to flow out of the blood vessel into the tissue. This flow out of 
@@ -100,9 +100,9 @@
                               increased blood flow to the injury by the opening up of endothelial linings.
                          </p>
                          <p>
-                              What causes these vascular events to occur? The initial reaction is caused my neurogenic and myogenic responses 
+                              What causes these vascular events to occur? The initial reaction is caused by neurogenic and myogenic responses 
                               to injury. The nerves and muscles respond first. Then the many inflammatory cytokines and mediators that 
-                              are released by the sentry cells in the local area will contribute to inlfammation. They can even start inflammation 
+                              are released by the sentry cells in the local area will contribute to inflammation. They can even start inflammation 
                               if an infection with no injury. Local Sentry and Mast Cell release things like Histamine, Prostaglandins, 
                               Leukotrienes, Tumor Necrosis Factor alpha (TNF-a), Interleukin 1 (IL-1), C3a and C5a.  Inflammation is broken down 
                               into 2 categories based on where it starts. I have gone through so many immunology courses and they always 
@@ -116,49 +116,49 @@
                     <section>
                          <h2 class="science-headers" id="acid">Arachidonic Acid Pathway</h2>
                          <p>  
-                              The response of inflammation from cellular damage pathway can happen from physical trauma like a cut, 
+                              The response of inflammation from cellular damage pathways can happen from physical trauma like a cut, 
                               break or burn. It can also happen from pathogens that release toxins. Bacteria will release toxins that 
                               cause cell damage. Even immune cells like the neutrophils, when they fight the bacteria, will release 
                               their enzymes that can damage cells. This is why chronic inflammation leads to tissue damage and 
                               fibrosis (scar tissue). Chronic Inflammation can also lead to tumor genesis.
                          </p>   
                          <p>
-                              All cells have a membrane made up of a phospholipids. When they get damaged, these phospholipids can be 
-                              knocked loose into the tissue. These phospholipid break down into Arachidonic Acid. These free phospholipids 
-                              will be changed by and enzyme called Phospholipase A2 (PLA2). The PLA2 will break down the phospholipid 
-                              into Arachidonic Acid (AA). The AA will be further broken down by two other enzymes that creates two 
+                              All cells have a membrane made up of phospholipids. When they get damaged, these phospholipids can be 
+                              knocked loose into the tissue. These phospholipids break down into Arachidonic Acid. These free phospholipids 
+                              will be changed by an enzyme called Phospholipase A2 (PLA2). The PLA2 will break down the phospholipid 
+                              into Arachidonic Acid (AA). The AA will be further broken down by two other enzymes that create two 
                               further pathways.  Steroids like Prednisone will block Phospholipase A2 and thus block all the pathways of 
-                              Arachidonic Acid. This is what makes it a powerful anti inflammatory drug.
+                              Arachidonic Acid. This is what makes it a powerful anti-inflammatory drug.
                          </p>
                          <p>
                               The first the Arachidonic Acid can take is the Cyclooxygenase (COX) enzyme pathway which breaks down 
                               the AA into Prostaglandins. The COX enzyme is the key target for Aspirin and all over the counter 
                               Non Steroidal Anti Inflammatory Drugs (NSAIDS) like Ibuprofen. This blocks all the downstream effects 
                               of the prostaglandins. These prostaglandins will be used by the blood vessels to regulate vascular flow. 
-                              In healthy tissues, the blood vessels will covert the Protaglandins to Prostacyclin (PGI2) to keep 
+                              In healthy tissues, the blood vessels will convert the Prostaglandins to Prostacyclin (PGI2) to keep 
                               vessels dilated and flowing.  In injury, the blood vessels will convert the Prostaglandins to Thromboxane 
                               A2 (TXA2) to do vasoconstriction to slow blood flow. The reset of the prostaglandins will go on to 
                               produce fever and pain. PGE2 is the key prostaglandin of pain and fever. This is how taking over the 
-                              counter pain relivers help reduce pain by blocking this entire COX pathway. Prostaglandins might play 
+                              counter pain relievers help reduce pain by blocking this entire COX pathway. Prostaglandins might play 
                               a role in pain and inflammation, but they also play a role in protection of the stomach lining from 
                               stomach acid. This is why taking NSAIDS will cause problems with the stomach. It blocks the prostaglandins 
                               that protect the stomach from the acid.
                          </p>
                          <p>
                               There are also 2 forms of the COX enzyme with COX1 and COX2. They both have different effects and some 
-                              drugs focus on affecting one more than the other. Most over the counter pain relivers block both. COX1 specific 
-                              inhibitors will affect platelets and blood clotting. This had lead to the use of Aspirin for prevention of 
+                              drugs focus on affecting one more than the other. Most over the counter pain relievers block both. COX1 specific 
+                              inhibitors will affect platelets and blood clotting. This has led to the use of Aspirin for prevention of 
                               blood clots. It also raises the risk of bleeding events. That has led to development of COX2 specific 
-                              inhibitors. COX2 is linked to PGE2 and its role in pain and fever. This had led to COX2 specific inhibitors 
+                              inhibitors. COX2 is linked to PGE2 and its role in pain and fever. This has led to COX2 specific inhibitors 
                               that only target this part of the pathway. This allows the COX1 intact for normal blood clotting. It still 
-                              blocks the protective prostaglandins that protect the stomach. Most over the counter pain medication block 
+                              blocks the protective prostaglandins that protect the stomach. Most over-the-counter pain medications block 
                               both of these pathways.
                          </p>
                          <p>
-                              The second pathway the Arachidonic Acid can take is the Lipooxygenase (LOX) enzyme pathway which 
+                              The second pathway the Arachidonic Acid can take is the Lipoxygenase (LOX) enzyme pathway which 
                               breaks down AA into Leukotrienes. The key leukotriene in inflammation is leukotriene B4 (LB4). This 
                               acts as a strong attractant for neutrophils and leads to swelling. The LB4 is produced by the AA pathway,
-                              but its also produced by Mast Cells after they degranulate. Many of these inflammatory cytokines will 
+                              but it is also produced by Mast Cells after they degranulate. Many of these inflammatory cytokines will 
                               be released by Mast Cells from pathogens. The rest of the Leukotrienes with LC4, LD4 and LE4 all play 
                               a role in bronchoconstriction. They are targets of medications in Asthma and other breathing disorders.
                          </p>
@@ -173,7 +173,7 @@
                               infection and releasing proinflammatory cytokines. This begins with the sentry cells like mast 
                               cells and macrophages. They are the first responders to an infection. They release inflammatory 
                               substances that will go to the endothelial cells and begin vasodilation and increase permeability. 
-                              The mast cells will release Histamine while the macrophage will release TNF-a and IL-1 or Interferrons.
+                              The mast cells will release Histamine while the macrophage will release TNFa and IL-1 or Interferons.
                               The other inflammatory mediators that can act upon the endothelial cells are the C3a and C5a of the 
                               complement system. The complement system is a group of proteins that can be activated by pathogens or 
                               antibodies to create inflammation.
@@ -202,24 +202,24 @@
                               process antigens and begin expressing proinflammatory cytokines like TNF-a and IL-1. These cytokines are 
                               not expressed immediately as they actually takes time to be produced. The endothelial cells will release 
                               their P selectins as part of their Weibel Palade Bodies initially. Then they will express the E selectins 
-                              later in response to the TNF-a and IL-1.
+                              later in response to the TNFa and IL-1.
                          </p>
                          <p>
                               The acute phase reaction is part of inflammation and starts when the sentry cells begin releasing 
                               cytokines like TNF-a, IL-1, and IL-6. The IL-6 will go to the liver and begin the production of critical 
                               proteins necessary in the immune response. One of them will be the production of all the complement 
                               proteins. Next will be the creation of C reactive Protein (CRP). The increased production of ferritin for 
-                              binding and storing iron is a critical actue phase reactant that plays a big role in chronic inflammation 
+                              binding and storing iron is a critical acute phase reactant that plays a big role in chronic inflammation 
                               and Anemia of Chronic Disease. The CRP protein will bind to phosphocholine that is expressed by damaged or 
                               dying cells. CRP will bind to these receptors and trigger the classical complement pathway. The measure of 
                               CRP is a key indicator for inflammation. Other key immune proteins will also be produced like mannose 
                               binding lectin (MBL) for the complement system. 
                          </p>
                          <p>
-                              The acute phase reaction will include the fever caused by the TNF-a and IL-1 in the hypothalamus. These are 
+                              The acute phase reaction will include the fever caused by the TNFa and IL-1 in the hypothalamus. These are 
                               all the effects of cellular inflammation from the first activation of Mast Cells releasing quick acting 
                               inflammatory signals. It acts on the Endothelial cells that will reinforce the neurogenic and myogenic reactions 
-                              caused by injury. It can initiate the inflammatory process in case of infection. The brings more immune cells into 
+                              caused by injury. It can initiate the inflammatory process in case of infection. This brings more immune cells into 
                               the tissue. The Antigen Presenting Cells in the tissue will process antigens and release more cytokines to 
                               enhance the inflammatory process. Other elements like complement can come into the space and trigger from 
                               pathogens. The activation of complement can further enhance inflammation. Damage to cells will call into 
